metadata/sf-prod/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <formula>IF(ISPICKVAL(SBQQ__ChargeType__c,&apos;Recurring&apos;),ROUND(SBQQ__NetTotal__c / SBQQ__SubscriptionTerm__c *12,2),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>