metadata/sf-prod/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/First_Year_Line_Value__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Line_Value__c</fullName>
    <formula>IF (SBQQ__Optional__c, 0 ,
IF (SBQQ__SubscriptionTerm__c &lt;= 12,  SBQQ__NetTotal__c, (SBQQ__NetTotal__c / SBQQ__SubscriptionTerm__c) * 12))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Year Line Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>