metadata/sf-prod/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Floor_Price__c.field-meta.xml
<CustomField>
    <fullName>Floor_Price__c</fullName>
    <formula>ROUND(SBQQ__Product__r.Floor_Price__c *  CURRENCYRATE(TEXT(CurrencyIsoCode)),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Floor Price referred from Product</inlineHelpText>
    <label>Floor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>