metadata/sf-prod/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/List_Total__c.field-meta.xml
<CustomField>
    <fullName>List_Total__c</fullName>
    <description>Twin field created to map list total to Opportunity line item object</description>
    <formula>SBQQ__ListTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Total Map</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>