metadata/sf-prod/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NetSuite_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_ID__c</fullName>
    <description>NetSuite ID obtained from the Product</description>
    <formula>SBQQ__Product__r.NetSuite_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NetSuite ID</label>
    <type>Text</type>
</CustomField>