metadata/sf-prod/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Distributor_Discount__c.field-meta.xml
<CustomField>
    <fullName>Quote_Distributor_Discount__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__DistributorDiscount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Distributor Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>