metadata/sf-prod/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Term__c</fullName>
    <formula>SBQQ__SubscriptionTerm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>