metadata/sf-prod/force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/SBQQ__Validate_billing_frequency.validationRule-meta.xml
<ValidationRule>
    <fullName>SBQQ__Validate_billing_frequency</fullName>
    <active>false</active>
    <description>When Charge Type is One-Time, Billing Frequency must not be selected.</description>
    <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingFrequency__c, &apos;&apos;)))</errorConditionFormula>
    <errorDisplayField>SBQQ__BillingFrequency__c</errorDisplayField>
    <errorMessage>When Charge Type is One-Time, a Billing Frequency value cannot be selected.</errorMessage>
</ValidationRule>