metadata/sf-prod/force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Validate_Quote_Line_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Quote_Line_Quantity</fullName>
    <active>false</active>
    <errorConditionFormula>SBQQ__Quantity__c &lt; SBQQ__Product__r.Min_Quantity__c
&amp;&amp;
SBQQ__ProductFamily__c != &apos;Kayako&apos;</errorConditionFormula>
    <errorMessage>Quantity of the product cannot be less than Minimum Product Quantity.</errorMessage>
</ValidationRule>