metadata/sf-prod/force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Validate_Start_Date_And_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Start_Date_And_End_Date</fullName>
    <active>true</active>
    <description>LAMBDA-65397: End Date cannot be earlier than or same as Start Date</description>
    <errorConditionFormula>AND(
NOT(ISBLANK( SBQQ__StartDate__c )),
NOT(ISBLANK( SBQQ__EndDate__c )),
SBQQ__StartDate__c &gt;= SBQQ__EndDate__c
)</errorConditionFormula>
    <errorMessage>End Date cannot be earlier than or same as Start Date.</errorMessage>
</ValidationRule>